src/test/ui/ptr-coercion.stderr
error[E0308]: mismatched types
  --> $DIR/ptr-coercion.rs:7:25
   |
LL |     let x: *mut isize = x;
   |                         ^ types differ in mutability
   |
   = note: expected type `*mut isize`
              found type `*const isize`

error[E0308]: mismatched types
  --> $DIR/ptr-coercion.rs:13:25
   |
LL |     let x: *mut isize = &42;
   |                         ^^^ types differ in mutability
   |
   = note: expected type `*mut isize`
              found type `&isize`

error[E0308]: mismatched types
  --> $DIR/ptr-coercion.rs:19:25
   |
LL |     let x: *mut isize = x;
   |                         ^ types differ in mutability
   |
   = note: expected type `*mut isize`
              found type `*const isize`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
